tests/ui/invalid_paths.stderr
error: catch-all routes (`{*...}`) cannot be represented in OpenAPI
  --> tests/ui/invalid_paths.rs:16:21
   |
16 |     #[endpoint(GET, "/files/{*rest}")]
   |                     ^^^^^^^^^^^^^^^^

error: escaped braces (`{{`, `}}`) are not supported in paths
  --> tests/ui/invalid_paths.rs:19:21
   |
19 |     #[endpoint(GET, "/literal/{{brace}}")]
   |                     ^^^^^^^^^^^^^^^^^^^^

error: duplicate route `GET /dup`
  --> tests/ui/invalid_paths.rs:25:21
   |
25 |     #[endpoint(GET, "/dup")]
   |                     ^^^^^^

error: path conflicts with `/items/{id}`
  --> tests/ui/invalid_paths.rs:31:21
   |
31 |     #[endpoint(GET, "/items/{name}")]
   |                     ^^^^^^^^^^^^^^^
